<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@color/MainColor">
    <TextView
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up"
        android:textSize="48sp"
        android:textColor="@color/ThirdlyColor"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Namelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/SignIn"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/MainColor"
        android:hint="@string/Name"
        android:textColorHint="@color/MainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/MainColor"
            android:padding="12dp"
            android:inputType="text"
            android:background="@drawable/rounded_edittext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/Namelayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/MainColor"
        android:hint="@string/Email"
        android:textColorHint="@color/MainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/MainColor"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Passwordlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/Emaillayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/MainColor"
        android:hint="@string/Password"
        android:textColorHint="@color/MainColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/MainColor"
            android:padding="12dp"
            android:background="@drawable/rounded_edittext"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Sign In Button -->
    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ThirdlyColor"
        android:text="@string/Sign_Up"
        app:layout_constraintTop_toBottomOf="@id/Passwordlayout"
        android:layout_marginTop="20dp"/>

    <!-- Sign Up Button -->

</androidx.constraintlayout.widget.ConstraintLayout>
