<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@color/MainColor">

    <TextView
        android:id="@+id/chooseRoleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Choose_Role"
        android:textSize="48sp"
        android:textColor="@color/ThirdlyColor"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Card for Job Seeker -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardJobSeeker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/chooseRoleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/SecondaryColor"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <!-- Icon for Job Seeker -->
            <ImageView
                android:id="@+id/iconJobSeeker"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/jobseeker"
                android:contentDescription="@string/Job_Seeker" />

            <!-- Text for Job Seeker -->
            <TextView
                android:id="@+id/textJobSeeker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/Job_Seeker"
                android:textColor="@color/MainColor"
                android:textSize="18sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Card for Company -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/cardJobSeeker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/SecondaryColor"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical">

            <!-- Icon for Company -->
            <ImageView
                android:id="@+id/iconCompany"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/company"
                android:contentDescription="@string/Company" />

            <!-- Text for Company -->
            <TextView
                android:id="@+id/textCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/Company"
                android:textColor="@color/MainColor"
                android:textSize="18sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
