<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.myapplication.DisabilityData" /> <!-- Adjust the package name accordingly -->
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeHeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- TextView for "Hello" -->
            <TextView
                android:id="@+id/Hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hello"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="@{user.name}"
                android:textColor="@color/text_color"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Hello"
                android:layout_marginTop="8dp" />



            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_image_picker"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <GridLayout
            android:id="@+id/chossing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeHeaderContainer"
            android:layout_marginTop="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profilecard"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/company_card_background"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/llProfileCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iconProfile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/textProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Profile"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardNot"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_columnWeight="1"
                app:cardBackgroundColor="@color/job_applied_card_background"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/llNotCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iconNot"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_alert" />

                    <TextView
                        android:id="@+id/textNot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Notification"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>